refactor: move plugin to settings

--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@medurajs/medusa-feed-yandex",
   "version": "0.0.1",
-  "description": "A Medusa plugin that exports product data in Yandex Marketâ€™s YML feed format",
+  "description": "A Medusa plugin that exports product data in Yandex Market YML feed format",
   "license": "MIT",
   "files": [
     ".medusa/server"
