--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -51,13 +51,13 @@
     "yandex-market-language": "^0.5.0"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "^2.8.3",
-    "@medusajs/cli": "^2.8.3",
-    "@medusajs/framework": "^2.8.3",
-    "@medusajs/icons": "^2.8.3",
-    "@medusajs/medusa": "^2.8.3",
-    "@medusajs/test-utils": "^2.8.3",
-    "@medusajs/ui": "^4.0.13",
+    "@medusajs/admin-sdk": "2.8.4",
+    "@medusajs/cli": "2.8.4",
+    "@medusajs/framework": "2.8.4",
+    "@medusajs/icons": "2.8.4",
+    "@medusajs/medusa": "2.8.4",
+    "@medusajs/test-utils": "2.8.4",
+    "@medusajs/ui": "4.0.14",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
@@ -78,13 +78,13 @@
     "yalc": "^1.0.0-pre.53"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "^2.8.3",
-    "@medusajs/cli": "^2.8.3",
-    "@medusajs/framework": "^2.8.3",
-    "@medusajs/icons": "^2.8.3",
-    "@medusajs/medusa": "^2.8.3",
-    "@medusajs/test-utils": "^2.8.3",
-    "@medusajs/ui": "^4.0.13",
+    "@medusajs/admin-sdk": "2.8.4",
+    "@medusajs/cli": "2.8.4",
+    "@medusajs/framework": "2.8.4",
+    "@medusajs/icons": "2.8.4",
+    "@medusajs/medusa": "2.8.4",
+    "@medusajs/test-utils": "2.8.4",
+    "@medusajs/ui": "4.0.14",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
