--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -9,7 +9,9 @@
     "directory": "packages/medusa-feed-yandex"
   },
   "files": [
-    ".medusa/server"
+    ".medusa/server",
+    "integration-tests",
+    "src"
   ],
   "exports": {
     "./package.json": "./package.json",
@@ -64,10 +66,13 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.13.17",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.2.25",
     "awilix": "^8.0.1",
+    "jest": "^29.7.0",
     "pg": "^8.14.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
