--- a/examples/feed-yandex/medusa/package.json
+++ b/examples/feed-yandex/medusa/package.json
@@ -16,13 +16,15 @@
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "dev": "medusa develop",
+    "dev": "yarn predev && yarn && medusa develop",
+    "predev": "medusa plugin:add @gorgo/medusa-feed-yandex",
+    "db:migrate": "medusa db:migrate",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@gorgo/medusa-feed-yandex": "file:.yalc/@gorgo/medusa-feed-yandex",
+    "@gorgo/medusa-feed-yandex": "latest",
     "@medusajs/admin-sdk": "2.8.4",
     "@medusajs/cli": "2.8.4",
     "@medusajs/framework": "2.8.4",
