chore: configure tunneling payment-tkassa examples

--- a/examples/payment-tkassa/medusa/.env.template
+++ b/examples/payment-tkassa/medusa/.env.template
@@ -6,4 +6,8 @@ REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://medusa:supersecret@localhost/medusa-payment-tkassa
-MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=payment-tkassa-storefront
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
+
+# Testing only - for TKassa
+LOCALTUNNEL_SUBDOMAIN=medusa-tkassa
+DB_NAME=medusa-payment-tkassa
