--- a/examples/payment-tkassa/medusa-storefront/package.json
+++ b/examples/payment-tkassa/medusa-storefront/package.json
@@ -11,8 +11,11 @@
     "dev": "next dev --turbopack -p 8000",
     "build": "next build",
     "start": "next start -p 8000",
+    "start:tunnel": "concurrently \"yarn start\" \"dotenv -e .env -- yarn tunnel\"",
     "lint": "next lint",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "dev:tunnel": "concurrently \"yarn dev\" \"dotenv -e .env -- yarn tunnel\"",
+    "tunnel": "lt --port 8000 --subdomain $LOCALTUNNEL_SUBDOMAIN"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -36,6 +39,7 @@
     "@babel/core": "^7.17.5",
     "@medusajs/types": "latest",
     "@medusajs/ui-preset": "latest",
+    "@types/localtunnel": "^2",
     "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/pg": "^8.11.0",
@@ -45,14 +49,17 @@
     "ansi-colors": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
+    "concurrently": "^9.1.2",
+    "dotenv-cli": "^8.0.0",
     "eslint": "8.10.0",
     "eslint-config-next": "15.0.3",
+    "localtunnel": "^2.0.2",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^5.3.2"
   },
-  "packageManager": "yarn@3.2.3",
+  "packageManager": "yarn@4.9.1",
   "resolutions": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
