feat(medusa-payment-tkassa): improve overall

--- a/examples/payment-tkassa/medusa/.env.template
+++ b/examples/payment-tkassa/medusa/.env.template
@@ -8,6 +8,9 @@ COOKIE_SECRET=supersecret
 DATABASE_URL=postgres://medusa:supersecret@localhost/medusa-payment-tkassa
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
 
+TKASSA_TERMINAL_KEY=1234567
+TKASSA_PASSWORD=superssecret
+TKASSA_SERVER=https://securepay.tinkoff.ru
+
 # Testing only - for TKassa
 LOCALTUNNEL_SUBDOMAIN=medusa-tkassa
-DB_NAME=medusa-payment-tkassa
