--- a/examples/payment-tkassa/medusa/package.json
+++ b/examples/payment-tkassa/medusa/package.json
@@ -14,18 +14,20 @@
   ],
   "scripts": {
     "build": "medusa build",
+    "db:migrate": "medusa db:migrate",
+    "dev": "yarn predev && yarn && medusa develop",
+    "dev:tunnel": "concurrently \"yarn dev\" \"dotenv -e .env -- yarn tunnel\"",
+    "predev": "medusa plugin:add @gorgo/medusa-payment-tkassa",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
     "start:tunnel": "concurrently \"yarn start\" \"dotenv -e .env -- yarn tunnel\"",
-    "dev": "medusa develop",
-    "dev:tunnel": "concurrently \"yarn dev\" \"dotenv -e .env -- yarn tunnel\"",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "tunnel": "lt --port 9000 --subdomain $LOCALTUNNEL_SUBDOMAIN"
   },
   "dependencies": {
-    "@gorgo/medusa-payment-tkassa": "file:.yalc/@gorgo/medusa-payment-tkassa",
+    "@gorgo/medusa-payment-tkassa": "latest",
     "@medusajs/admin-sdk": "2.8.4",
     "@medusajs/cli": "2.8.4",
     "@medusajs/framework": "2.8.4",
