--- a/examples/payment-tkassa/medusa/.env.template
+++ b/examples/payment-tkassa/medusa/.env.template
@@ -5,12 +5,10 @@ AUTH_CORS=http://localhost:5173,http://localhost:9000,http://localhost:8000,http
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=postgres://medusa:supersecret@localhost/medusa-payment-tkassa
+DB_NAME=medusa_payment_tkassa
+DATABASE_URL=postgres://postgres@localhost/$DB_NAME
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
 
-TKASSA_TERMINAL_KEY=1234567
-TKASSA_PASSWORD=superssecret
-TKASSA_SERVER=https://securepay.tinkoff.ru
-
-# Testing only - for TKassa
-LOCALTUNNEL_SUBDOMAIN=medusa-tkassa
+# TKassa configuration
+TKASSA_TERMINAL_KEY=
+TKASSA_PASSWORD=
