--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
+.env
+node_modules
+*yarn-error.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+packages/**/.yarn/*
+examples/**/.yarn/*
+
 .DS_Store
+
+.eslintcache
+
+.idea
+.turbo
+**/dist
+**/stats
+.vscode
+
+**/tsconfig.tsbuildinfo
+
+# Cache File
+/packages/**/.cache
+# Static File
+/examples/**/static
