--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "packageManager": "yarn@4.9.2",
   "dependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5"
   }
 }
