--- a/packages/medusa-payment-robokassa/package.json
+++ b/packages/medusa-payment-robokassa/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "base64url": "^3.0.1",
+    "fast-xml-parser": "^5.2.5",
     "md5": "^2.3.0"
   },
   "devDependencies": {
