chore(medusa-payment-robokassa, medusa-payment-tkassa): improve examples

--- a/examples/payment-robokassa/medusa/.env.template
+++ b/examples/payment-robokassa/medusa/.env.template
@@ -1,9 +1,16 @@
-STORE_CORS=http://localhost:8000,https://docs.medusajs.com
+STORE_CORS=http://localhost:8000,https://docs.medusajs.com,https://medusa-robokassa-storefront.loca.lt
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=
-DB_NAME=medusa-v2
-POSTGRES_URL=
+DB_NAME=medusa_payment_robokassa
+DATABASE_URL=postgres://postgres@localhost/$DB_NAME
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
+
+ROBOKASSA_MERCHANT_LOGIN=
+ROBOKASSA_ALG=
+ROBOKASSA_PASSWORD_1=
+ROBOKASSA_PASSWORD_2=
+ROBOKASSA_TEST_PASSWORD_1=
+ROBOKASSA_TEST_PASSWORD_2=
