--- a/examples/payment-robokassa/medusa-storefront/package.json
+++ b/examples/payment-robokassa/medusa-storefront/package.json
@@ -11,8 +11,11 @@
     "dev": "next dev --turbopack -p 8000",
     "build": "next build",
     "start": "next start -p 8000",
+    "start:tunnel": "concurrently \"yarn start\" \"yarn tunnel\"",
     "lint": "next lint",
-    "analyze": "ANALYZE=true next build"
+    "analyze": "ANALYZE=true next build",
+    "dev:tunnel": "concurrently \"yarn dev\" \"yarn tunnel\"",
+    "tunnel": "lt --port 8000 --subdomain medusa-robokassa-storefront"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -45,8 +48,10 @@
     "ansi-colors": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
+    "concurrently": "^9.1.2",
     "eslint": "8.10.0",
     "eslint-config-next": "15.0.3",
+    "localtunnel": "^2.0.2",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
