--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,13 @@ node_modules
 !.yarn/versions
 
 packages/**/.yarn/*
+packages/**/.medusa/*
 examples/**/.yarn/*
+examples/**/static
+examples/**/.next
+examples/**/.medusa
+examples/**/.yalc
+examples/**/yalc.lock
 
 .DS_Store
 
@@ -24,7 +30,4 @@ examples/**/.yarn/*
 
 **/tsconfig.tsbuildinfo
 
-# Cache File
-/packages/**/.cache
-# Static File
-/examples/**/static
+
