fix(medusa-payment-robokassa): improve overall

--- a/examples/payment-robokassa/medusa/.env.template
+++ b/examples/payment-robokassa/medusa/.env.template
@@ -9,7 +9,8 @@ DATABASE_URL=postgres://postgres@localhost/$DB_NAME
 MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
 
 ROBOKASSA_MERCHANT_LOGIN=
-ROBOKASSA_ALG=
+# Hash algorithms: md5, ripemd160, sha1, sha256, sha384 or sha512
+ROBOKASSA_HASH_ALGORITHM=
 ROBOKASSA_PASSWORD_1=
 ROBOKASSA_PASSWORD_2=
 ROBOKASSA_TEST_PASSWORD_1=
