--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -50,11 +50,6 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "dependencies": {
-    "date-fns": "^3.6.0",
-    "i18next": "^23.7.11",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.2",
-    "react-i18next": "^13.5.0",
     "yandex-market-language": "^0.5.0"
   },
   "devDependencies": {
@@ -105,7 +100,8 @@
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
-    "react-i18next": "^13.5.0"
+    "react-i18next": "^13.5.0",
+    "zod": "^3.22.4"
   },
   "engines": {
     "node": ">=20"
