--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gorgojs/medusa-feed",
+    "url": "https://github.com/gorgojs/medusa-plugins",
     "directory": "packages/medusa-feed-yandex"
   },
   "files": [
