--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -63,4 +63,5 @@ configs:
     content: |
       CREATE DATABASE medusa_feed;
       CREATE DATABASE medusa_feed_yandex;
-      CREATE DATABASE medusa_payment_tkassa;     
+      CREATE DATABASE medusa_payment_tkassa;
+      CREATE DATABASE medusa_payment_robokassa;
