--- a/examples/payment-robokassa/medusa/package.json
+++ b/examples/payment-robokassa/medusa/package.json
@@ -27,11 +27,11 @@
     "tunnel": "lt --port 9000 --subdomain medusa-robokassa"
   },
   "dependencies": {
-    "@gorgo/medusa-payment-robokassa": "file:.yalc/@gorgo/medusa-payment-robokassa",
-    "@medusajs/admin-sdk": "2.8.5",
-    "@medusajs/cli": "2.8.5",
-    "@medusajs/framework": "2.8.5",
-    "@medusajs/medusa": "2.8.5",
+    "@gorgo/medusa-payment-robokassa": "latest",
+    "@medusajs/admin-sdk": "2.8.7",
+    "@medusajs/cli": "2.8.7",
+    "@medusajs/framework": "2.8.7",
+    "@medusajs/medusa": "2.8.7",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
@@ -40,7 +40,7 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.8.5",
+    "@medusajs/test-utils": "2.8.7",
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
