refactor(medusa-payment-tkassa): improve overall

--- a/packages/medusa-payment-tkassa/package.json
+++ b/packages/medusa-payment-tkassa/package.json
@@ -38,7 +38,7 @@
   ],
   "scripts": {
     "build": "medusa plugin:build",
-    "dev": "medusa plugin:develop",
+    "dev": "yarn predev && medusa plugin:develop",
     "predev": "medusa plugin:publish",
     "prepublishOnly": "medusa plugin:build"
   },
