chore(medusa-1c): align examples

--- a/examples/1c/medusa/package.json
+++ b/examples/1c/medusa/package.json
@@ -16,12 +16,16 @@
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "dev": "medusa develop",
+    "dev": "yarn predev && yarn && medusa develop",
+    "dev:tunnel": "concurrently \"yarn dev\" \"yarn tunnel\"",
+    "predev": "medusa plugin:add @gorgo/medusa-1c",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "tunnel": "lt --port 9000 --subdomain medusa-1c"
   },
   "dependencies": {
+    "@gorgo/medusa-1c": "latest",
     "@medusajs/admin-sdk": "2.8.8",
     "@medusajs/cli": "2.8.8",
     "@medusajs/framework": "2.8.8",
@@ -31,6 +35,8 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "awilix": "^8.0.1",
+    "concurrently": "^9.2.0",
+    "localtunnel": "^2.0.2",
     "pg": "^8.13.0"
   },
   "devDependencies": {
@@ -39,6 +45,7 @@
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
+    "@types/localtunnel": "^2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
