--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -61,7 +61,7 @@ configs:
     # This file will be executed when the database is initialized
     # It creates the necessary databases for all the examples
     content: |
-      CREATE DATABASE 1c;
+      CREATE DATABASE medusa_1c;
       CREATE DATABASE medusa_feed;
       CREATE DATABASE medusa_feed_yandex;
       CREATE DATABASE medusa_payment_tkassa;
