--- a/packages/medusa-1c/package.json
+++ b/packages/medusa-1c/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "medusa-1c",
+	"name": "@gorgo/medusa-1c",
 	"version": "0.0.1",
 	"description": "Medusa plugin for integration with 1C:Enterprise",
   "repository": {
