--- a/packages/medusa-1c/package.json
+++ b/packages/medusa-1c/package.json
@@ -48,7 +48,8 @@
 	"dependencies": {
 		"commerceml-parser": "^3.0.3",
 		"lodash": "^4.17.21",
-		"sluga": "^0.2.1"
+		"sluga": "^0.2.1",
+		"unzipper": "^0.12.3"
 	},
 	"devDependencies": {
 		"@medusajs/admin-sdk": "^2.8.0",
@@ -68,6 +69,7 @@
 		"@types/node": "^20.0.0",
 		"@types/react": "^18.3.2",
 		"@types/react-dom": "^18.2.25",
+		"@types/unzipper": "^0",
 		"awilix": "^8.0.1",
 		"pg": "^8.13.0",
 		"prop-types": "^15.8.1",
