--- a/examples/feed-yandex/medusa/package.json
+++ b/examples/feed-yandex/medusa/package.json
@@ -24,11 +24,11 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@gorgo/medusa-feed-yandex": "file:.yalc/@gorgo/medusa-feed-yandex",
-    "@medusajs/admin-sdk": "2.8.8",
-    "@medusajs/cli": "2.8.8",
-    "@medusajs/framework": "2.8.8",
-    "@medusajs/medusa": "2.8.8",
+    "@gorgo/medusa-feed-yandex": "latest",
+    "@medusajs/admin-sdk": "2.9.0",
+    "@medusajs/cli": "2.9.0",
+    "@medusajs/framework": "2.9.0",
+    "@medusajs/medusa": "2.9.0",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
@@ -37,7 +37,7 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.8.8",
+    "@medusajs/test-utils": "2.9.0",
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
