--- a/examples/payment-tkassa/medusa/package.json
+++ b/examples/payment-tkassa/medusa/package.json
@@ -27,11 +27,11 @@
     "tunnel": "lt --port 9000 --subdomain medusa-tkassa"
   },
   "dependencies": {
-    "@gorgo/medusa-payment-tkassa": "file:.yalc/@gorgo/medusa-payment-tkassa",
-    "@medusajs/admin-sdk": "2.10.1",
-    "@medusajs/cli": "2.10.1",
-    "@medusajs/framework": "2.10.1",
-    "@medusajs/medusa": "2.10.1",
+    "@gorgo/medusa-payment-tkassa": "latest",
+    "@medusajs/admin-sdk": "2.10.2",
+    "@medusajs/cli": "2.10.2",
+    "@medusajs/framework": "2.10.2",
+    "@medusajs/medusa": "2.10.2",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
@@ -40,7 +40,7 @@
     "pg": "^8.13.0"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.10.1",
+    "@medusajs/test-utils": "2.10.2",
     "@mikro-orm/cli": "6.4.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
