--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -27,15 +27,22 @@
     "framer-motion": "^12.23.22",
     "glob": "^11.0.3",
     "lucide-react": "^0.544.0",
+    "minisearch": "^7.2.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-mdx": "^3.1.1",
     "remark-mdx-frontmatter": "^5.2.0",
+    "remark-mdx-to-plain-text": "^3.0.0",
+    "remark-parse": "^11.0.0",
+    "strip-markdown": "^6.0.0",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
   },
