--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@sindresorhus/slugify": "^3.0.0",
+    "@stefanprobst/rehype-extract-toc": "^3.0.0",
     "@types/glob": "^9.0.0",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +35,9 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-simple-icons": "^1.0.0-beta.5",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
