--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -65,6 +65,7 @@ configs:
       CREATE DATABASE medusa_feed;
       CREATE DATABASE medusa_feed_yandex;
       CREATE DATABASE medusa_fulfillment_apiship;
+      CREATE DATABASE medusa_marketplace_ozon;
       CREATE DATABASE medusa_marketplace_wildberries;
       CREATE DATABASE medusa_marketplace_yandex_market;
       CREATE DATABASE medusa_payment_tkassa;
