chore: add marketplace-yandex-market example db

--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -66,3 +66,4 @@ configs:
       CREATE DATABASE medusa_feed_yandex;
       CREATE DATABASE medusa_payment_tkassa;
       CREATE DATABASE medusa_payment_robokassa;
+      CREATE DATABASE medusa_marketplace_yandex_market;
