feat(medusa-marketplace-wildberries): initial product export

--- a/packages/medusa-marketplace-wildberries/package.json
+++ b/packages/medusa-marketplace-wildberries/package.json
@@ -20,6 +20,7 @@
     "medusa-plugin",
     "medusa-v2",
     "medusa-plugin-integration",
+    "medusa-marketplace",
     "wildberries",
     "wildberries-marketplace",
     "marketplace"
