feat(medusa-fulfillment-apiship): add initial v0.1.0

--- a/examples/fulfillment-apiship/medusa/.env.template
+++ b/examples/fulfillment-apiship/medusa/.env.template
@@ -1,8 +1,13 @@
+MEDUSA_ADMIN_ONBOARDING_TYPE=nextjs
 STORE_CORS=http://localhost:8000,https://docs.medusajs.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
-AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
+AUTH_CORS=http://localhost:5173,http://localhost:9000,http://localhost:8000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=
-DB_NAME=medusa-v2
+DB_NAME=medusa_fulfillment_apiship
+DATABASE_URL=postgres://postgres@localhost/$DB_NAME
+MEDUSA_ADMIN_ONBOARDING_NEXTJS_DIRECTORY=medusa-storefront
+
+# Apiship configuration
+APISHIP_TOKEN=
