--- a/examples/fulfillment-apiship/medusa-storefront/package.json
+++ b/examples/fulfillment-apiship/medusa-storefront/package.json
@@ -22,12 +22,12 @@
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "lodash": "^4.17.21",
-    "next": "^15.3.1",
+    "next": "^16.1.1",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
@@ -39,8 +39,8 @@
     "@types/lodash": "^4.14.195",
     "@types/node": "17.0.21",
     "@types/pg": "^8.11.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
     "@types/react-instantsearch-dom": "^6.12.3",
     "ansi-colors": "^4.1.3",
     "autoprefixer": "^10.4.2",
@@ -58,7 +58,7 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
   "overrides": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   }
 }
