--- a/examples/fulfillment-apiship/medusa/package.json
+++ b/examples/fulfillment-apiship/medusa/package.json
@@ -14,38 +14,40 @@
   ],
   "scripts": {
     "build": "medusa build",
+    "db:migrate": "medusa db:migrate",
+    "dev": "yarn predev && yarn && medusa develop",
+    "dev:tunnel": "concurrently \"yarn dev\" \"yarn tunnel\"",
+    "predev": "medusa plugin:add @gorgo/medusa-fulfillment-apiship",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "dev": "medusa develop",
+    "start:tunnel": "concurrently \"yarn start\" \"yarn tunnel\"",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "tunnel": "lt --port 9000 --subdomain medusa-apiship"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.10.3",
-    "@medusajs/cli": "2.10.3",
-    "@medusajs/framework": "2.10.3",
-    "@medusajs/medusa": "2.10.3",
-    "@mikro-orm/core": "6.4.3",
-    "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3",
-    "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "@gorgo/medusa-fulfillment-apiship": "file:.yalc/@gorgo/medusa-fulfillment-apiship",
+    "@medusajs/admin-sdk": "2.12.5",
+    "@medusajs/cli": "2.12.5",
+    "@medusajs/framework": "2.12.5",
+    "@medusajs/medusa": "2.12.5"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.10.3",
-    "@mikro-orm/cli": "6.4.3",
+    "@medusajs/test-utils": "2.12.5",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
+    "@types/localtunnel": "^2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
+    "concurrently": "^9.1.2",
     "jest": "^29.7.0",
+    "localtunnel": "^2.0.2",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
@@ -53,5 +55,6 @@
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
