--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -16,6 +16,7 @@
     "@medusajs/icons": "^2.10.2",
     "@medusajs/ui": "^4.0.22",
     "@next/mdx": "^15.5.3",
+    "@next/third-parties": "^15.5.5",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
