chore(medusa-marketplace-ozon): added license and keyword

--- a/packages/medusa-marketplace-ozon/package.json
+++ b/packages/medusa-marketplace-ozon/package.json
@@ -23,7 +23,8 @@
     "ozon",
     "ozon-seller",
     "ozon-marketplace",
-    "marketplace"
+    "marketplace",
+    "medusa-marketplace"
   ],
   "scripts": {
     "build": "medusa plugin:build",
