--- a/examples/marketplace-ozon/medusa/.env.template
+++ b/examples/marketplace-ozon/medusa/.env.template
@@ -4,5 +4,9 @@ AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=
-DB_NAME=medusa-v2
+DB_NAME=medusa_marketplace_ozon
+DATABASE_URL=postgres://postgres@localhost/$DB_NAME
+
+OZON_CLIENT_ID=11111111
+OZON_API_KEY=xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+OZON_BASE_URL=https://api-seller.ozon.ru
