--- a/examples/marketplace-ozon/medusa/package.json
+++ b/examples/marketplace-ozon/medusa/package.json
@@ -16,26 +16,21 @@
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "dev": "medusa develop",
+    "dev": "yarn predev && yarn && medusa develop",
+    "predev": "medusa plugin:add @gorgo/medusa-marketplace-ozon",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.10.3",
-    "@medusajs/cli": "2.10.3",
-    "@medusajs/framework": "2.10.3",
-    "@medusajs/medusa": "2.10.3",
-    "@mikro-orm/core": "6.4.3",
-    "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3",
-    "awilix": "^8.0.1",
-    "pg": "^8.13.0"
+    "@gorgo/medusa-marketplace-ozon": "file:.yalc/@gorgo/medusa-marketplace-ozon",
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/medusa": "2.11.3"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.10.3",
-    "@mikro-orm/cli": "6.4.3",
+    "@medusajs/test-utils": "2.11.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
