--- a/examples/1c/medusa/package.json
+++ b/examples/1c/medusa/package.json
@@ -26,22 +26,13 @@
   },
   "dependencies": {
     "@gorgo/medusa-1c": "latest",
-    "@medusajs/admin-sdk": "2.10.3",
-    "@medusajs/cli": "2.10.3",
-    "@medusajs/framework": "2.10.3",
-    "@medusajs/medusa": "2.10.3",
-    "@mikro-orm/core": "6.4.3",
-    "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3",
-    "awilix": "^8.0.1",
-    "concurrently": "^9.2.0",
-    "localtunnel": "^2.0.2",
-    "pg": "^8.13.0"
+    "@medusajs/admin-sdk": "2.11.1",
+    "@medusajs/cli": "2.11.1",
+    "@medusajs/framework": "2.11.1",
+    "@medusajs/medusa": "2.11.1"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.10.3",
-    "@mikro-orm/cli": "6.4.3",
+    "@medusajs/test-utils": "2.11.1",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
@@ -49,6 +40,8 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
+    "concurrently": "^9.2.0",
+    "localtunnel": "^2.0.2",
     "jest": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
