--- a/examples/marketplace-yandex-market/medusa/.env.template
+++ b/examples/marketplace-yandex-market/medusa/.env.template
@@ -4,5 +4,5 @@ AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=
-DB_NAME=medusa-v2
+DB_NAME=medusa_marketplace_yandex_market
+DATABASE_URL=postgres://postgres@localhost/$DB_NAME
