feat(medusa-marketplace-yandex-market): initial product sync

--- a/examples/marketplace-yandex-market/medusa/.env.template
+++ b/examples/marketplace-yandex-market/medusa/.env.template
@@ -6,3 +6,7 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DB_NAME=medusa_marketplace_yandex_market
 DATABASE_URL=postgres://postgres@localhost/$DB_NAME
+
+YM_API_KEY=ACMA:xxxxxxxxxxxxxxxxxxxxx:xxxxxxxxx
+YM_BUSINESS_ID=XXXXXXXXX
+YM_BASE_URL=https://api.partner.market.yandex.ru
