--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -48,6 +48,7 @@
     "remark-mdx-to-plain-text": "^3.0.0",
     "remark-parse": "^11.0.0",
     "strip-markdown": "^6.0.0",
+    "unist-util-visit": "^5.0.0",
     "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2"
   },
