--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^12.23.22",
     "glob": "^11.0.3",
     "lucide-react": "^0.544.0",
+    "mdx-to-md": "^0.5.2",
     "minisearch": "^7.2.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
