--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -24,12 +24,12 @@
     "@stefanprobst/rehype-extract-toc": "^3.0.0",
     "@types/glob": "^9.0.0",
     "@types/mdx": "^2.0.13",
+    "@types/unist": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "framer-motion": "^12.23.22",
     "glob": "^11.0.3",
     "lucide-react": "^0.544.0",
-    "mdx-to-md": "^0.5.2",
     "minisearch": "^7.2.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
