--- a/www/docs/package.json
+++ b/www/docs/package.json
@@ -16,8 +16,8 @@
     "@mdx-js/react": "^3.1.1",
     "@medusajs/icons": "^2.10.2",
     "@medusajs/ui": "^4.0.22",
-    "@next/mdx": "^15.5.3",
-    "@next/third-parties": "^15.5.5",
+    "@next/mdx": "16.0.3",
+    "@next/third-parties": "16.0.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -33,12 +33,12 @@
     "html-to-text": "^9.0.5",
     "lucide-react": "^0.544.0",
     "minisearch": "^7.2.0",
-    "next": "15.5.3",
+    "next": "16.0.3",
     "next-intl": "^4.3.9",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-simple-icons": "^1.0.0-beta.5",
     "rehype-sanitize": "^6.0.0",
     "rehype-slug": "^6.0.0",
@@ -63,11 +63,15 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/html-to-text": "^9",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "tailwindcss": "^4",
     "tailwindcss-radix": "^4.0.2",
     "tsx": "^4.20.6",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3"
   }
 }
