chore: fix keywords

--- a/packages/medusa-feed-yandex/package.json
+++ b/packages/medusa-feed-yandex/package.json
@@ -41,7 +41,8 @@
     "export",
     "catalog export",
     "yandex yml",
-    "marketplace"
+    "marketplace",
+    "Яндекс"
   ],
   "scripts": {
     "build": "medusa plugin:build",
