--- a/packages/medusa-1c/package.json
+++ b/packages/medusa-1c/package.json
@@ -37,7 +37,10 @@
 		"medusa-plugin-other",
 		"medusa-plugin-erp",
 		"1c",
-		"1c:enterprise"
+    "1С",
+		"1c:enterprise",
+    "1С:Предприятие",
+    "1С Предприятие"
 	],
 	"scripts": {
 		"build": "medusa plugin:build",
