chore: fix scripts

--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -64,5 +64,6 @@ configs:
       CREATE DATABASE medusa_1c;
       CREATE DATABASE medusa_feed;
       CREATE DATABASE medusa_feed_yandex;
+      CREATE DATABASE medusa_fulfillment_apiship;
       CREATE DATABASE medusa_payment_tkassa;
       CREATE DATABASE medusa_payment_robokassa;
