--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "medusa-plugins",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "packages/utils/*"
   ],
   "packageManager": "yarn@4.9.2",
   "scripts": {
