--- a/packages/medusa-marketplace/tsconfig.json
+++ b/packages/medusa-marketplace/tsconfig.json
@@ -8,7 +8,8 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-    "declaration": false,
+    "declaration": true,
+    "emitDeclarationOnly": false,
     "sourceMap": false,
     "inlineSourceMap": true,
     "outDir": "./.medusa/server",
